# 23L-bd2

./: .gitignore  .project  BD2 projekt wymagania.md  README.md  bd2_projekt_erd.dmd
bd2_projekt_erd/: dl_settings.xml
bd2_projekt_erd/businessinfo/: Business Information.xml
bd2_projekt_erd/datatypes/: DDLSelection.local  DataTypes.xml  Diagrams.local  Objects.local
bd2_projekt_erd/datatypes/subviews/: 83636926-406E-0E29-40DC-5D71DE535442.xml
bd2_projekt_erd/logical/: Diagrams.local  Logical.xml  Objects.local
bd2_projekt_erd/logical/subviews/: F83539FC-7AD8-005E-5A28-4A05896018C0.xml
bd2_projekt_erd/mapping/: DeletedMap_RM97630817-3739-415C-834F-CE6A8C8DE6C9.xml  ExtendedMap_RM97630817-3739-415C-834F-CE6A8C8DE6C9.xml
bd2_projekt_erd/pm/: Process Model.xml
bd2_projekt_erd/rel/: 97630817-CE6A8C8DE6C9.xml  E024E397-9D9E2CCD3908.xml
bd2_projekt_erd/rel/97630817-CE6A8C8DE6C9/: DDLSelection.local  Diagrams.local  Objects.local
bd2_projekt_erd/rel/E024E397-9D9E2CCD3908/: DDLSelection.local  Diagrams.local
script/: create_mysql.sql  create_tables.sql  create_tables.txt  create_triggers.sql  drop_all.sql  example.sql  lista_zmian.txt  oracle.ddl  remove_triggers.sql
script/generate-data/: clear_data.sql  customer_cred.json  employee_cred.json  generate_data.ipynb  generate_data.py  hashes.py  pyproject.toml  requirements.txt  test.py
user_app/grab_a_car/: .gitignore  README.md  pubspec.yaml
user_app/grab_a_car/assets/: connection_credentials.json
user_app/grab_a_car/lib/: main.dart  temporary.dart
user_app/grab_a_car/linux/: CMakeLists.txt  (+1 more)
(+95 files in other folders)
