[tool.poetry]
name = "bd2-generate-data"
version = "0.1.0"
description = ""
authors = ["towienko <tomasz.owienko.stud@pw.edu.pl>"]
readme = "README.md"
packages = [{include = "bd2_generate_data"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^18.7.0"
sqlalchemy = "^2.0.13"
mysqlclient = "^2.1.1"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
